--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -10,6 +10,10 @@
   margin: 0 auto;
 }
 
+#card-timeline {
+  margin-left: 55px;
+}
+
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
   content: '';
@@ -23,21 +27,21 @@
 }
 
 /* Container around content */
-.container {
-  padding: 10px 40px;
+.container-timeline {
+  padding: 10px;
+  padding-left: 10px;
   position: relative;
   background-color: inherit;
-  width: 50%;
 }
 
 /* The circles on the timeline */
-.container::after {
+.container-timeline::after {
   content: '';
   position: absolute;
   width: 25px;
   height: 25px;
   right: -17px;
-  background-color: $card-bg;
+  background-color: #94ECBE;
   border: 4px solid #94ECBE;
   top: 15px;
   border-radius: 50%;
@@ -55,18 +59,18 @@
 }
 
 /* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
+// .left::before {
+//   content: " ";
+//   height: 0;
+//   position: absolute;
+//   top: 22px;
+//   width: 0;
+//   z-index: 1;
+//   right: 30px;
+//   border: medium solid white;
+//   border-width: 10px 0 10px 10px;
+//   border-color: transparent transparent transparent white;
+// }
 
 /* Add arrows to the right container (pointing left) */
 .right::before {
@@ -104,14 +108,14 @@
   }
 
   /* Full-width containers */
-  .container {
+  .container-timeline {
     width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
+    padding-left: 0px;
+    padding-right: 5px;
   }
 
   /* Make sure that all arrows are pointing leftwards */
-  .container::before {
+  .container-timeline::before {
     left: 60px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
