added gem pgsearch + insert form in view + adapt model event

--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+.search-form {
+  margin-bottom: 20px;
+}
+
+.form-control {
+  margin-bottom: 10px;
+}
+
 
 /* The actual timeline (the vertical ruler) */
 .timeline {
