--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -4,6 +4,15 @@
       <h1><%= @baby.name %></h1>
       <p>Un evénement</p>
     </div>
+    <div class ="search-form">
+      <%= form_tag event_timeline_baby_path, method: :get do %>
+      <%= text_field_tag :start_time,
+      params[:start_time],
+      class: "form-control",
+      placeholder: "Rechercher par date"%>
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+      <% end %>
+    </div>
     <div class="timeline">
       <% last_date = [] %>
       <% @events.each do |event| %>
