--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -23,12 +23,11 @@
             <%= "" %>
           <% end %>
           <div class="card event" id="card-timeline">
-            <h2>Biberon</h2>
-            <h2><%= event.type %></h2>
-            <p><%= event.start_time.strftime("%d.%m.%Y") %> à <%= event.start_time.strftime("%H:%M") %></p>
-            <p><%= event.value_string %></p>
-            <p><%= event.value_float.to_i %> ml</p>
-            <p><%= event.comment %></p>
+            <h2 class="text-timeline">Biberon</h2>
+            <h2 class="text-timeline"><%= event.type %></h2>
+            <p class="text-timeline"><%= event.start_time.strftime("%Hh%M") %></p>
+            <p class="text-timeline"><%= event.value_string %></p>
+            <p class="text-timeline"><%= event.value_float.to_i %> ml</p>
           </div>
         </div>
       <% end %>
