--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -5,11 +5,15 @@
     <h2>Nouvel Evénement</h2>
     <%= simple_form_for [@baby, @event] do |f| %>
       <%= f.input :value_float, :label => 'Quantité (ml)' if @event.type == "Biberon" %>
+      <%= f.input :value_float, :label => 'Température' if @event.type == "Temperature" %>
+      <%= f.input :value_float, :label => 'Taille (cm)' if @event.type == "Taille" %>
+      <%= f.input :value_float, :label => 'Poids (kg)' if @event.type == "Poids" %>
       <%= f.input :value_string, :label => 'Description' if @event.type == "Repas" %>
       <%= f.input :value_string, as: :select, collection: Event::DIAPER_CONTENT, label: "Contenu" if @event.type == "Couche" %>
       <%= f.input :start_time, as: :datetime, :label => 'Date et Heure', html5: true %>
       <%= f.input :end_time, as: :datetime, :label => 'Fin', html5: true if @event.type == "Dodo" || @event.type == "Maladie"  %>
       <%= f.input :comment, :label => 'Commentaire' %>
+      <%= f.input :type, as: :hidden %>
       <%= f.submit %>
     <% end %>
   </div>
