--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,12 +1,12 @@
 <% unless current_page?(controller: 'babies', action: 'index') %>
   <div class="menubar">
     <i class="fas fa-check-circle"></i>
-    <% unless current_page?(controller: 'babies', action: 'new') %>
-      <%= link_to baby_events_path(@baby) do%>
+    <% unless params[:controller] == 'events' && params[:action] == 'new' %>
+      <%= link_to new_baby_event_path(@baby) do%>
       <div class="button-circle mb-5">
         <%= image_tag "add.png", class: "circle-plus" %>
       </div>
-    <%end %>
+      <%end %>
   <%end %>
   <i class="fas fa-cog"></i>
 </div>
