--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,12 +1,14 @@
-<% unless current_page?(controller: 'babies', action: 'index') %>
+<% unless (params[:controller] == "babies") && (params[:action] == "index") %>
   <div class="menubar">
     <i class="fas fa-check-circle"></i>
+    <% unless (params[:controller] == "events") && (params[:action] == "new" || "choose_type") %>
     <% if @baby %>
       <%= link_to choose_type_baby_events_path(@baby) do%>
       <div class="button-circle mb-5">
         <%= image_tag "add.png", class: "circle-plus" %>
       </div>
       <%end %>
+      <% end %>
   <%end %>
   <i class="fas fa-cog"></i>
 </div>
