--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -2,7 +2,7 @@
   <div class="menubar">
     <i class="fas fa-check-circle"></i>
     <% unless (params[:controller] == "events") && (params[:action] == "new" || "choose_type") %>
-    <% if @baby.id %>
+    <% if @baby && @baby.id %>
       <%= link_to choose_type_baby_events_path(@baby) do%>
       <div class="button-circle mb-5">
         <%= image_tag "add.png", class: "circle-plus" %>
