Filter background-image

--- a/app/assets/stylesheets/pages/_show_babies.scss
+++ b/app/assets/stylesheets/pages/_show_babies.scss
@@ -27,7 +27,7 @@
 
 .bg-foot {
   height: 100px;
-  background: url("https://res.cloudinary.com/dw4harw6z/image/upload/v1617278572/feet_nrgzdn.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://res.cloudinary.com/dw4harw6z/image/upload/v1617278572/feet_nrgzdn.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
