--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <div class="card baby-profile-card mb-3" style="background: url('<%= cloudinary_url @baby.photo.key %>') ">
+      <div class="card baby-profile-card mb-3" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url @baby.photo.key %>') ">
         <div class="d-flex justify-content-between">
           <div class="last-eat d-flex align-items-center">
             <i class="fas fa-utensils"></i>
