Added event type icon

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,3 +18,8 @@
   border-radius: 4px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
+
+.event-icon {
+  margin-left: 10px;
+  margin-right: 20px;
+}
