--- a/app/views/events/choose_type.html.erb
+++ b/app/views/events/choose_type.html.erb
@@ -12,8 +12,9 @@
         <div class="carousel-item active">
           <% @daily_types.each do |type| %>
             <%= link_to new_baby_event_path(type:type), class: "text-decoration" do %>
-              <div class="card baby">
-                <h2><%= type %></h2>
+              <div class="card baby d-flex align-items-center">
+                <div class="event-icon"><%= image_tag type, height: 40, width: 40 %></div>
+                <div><h2><%= type %></h2></div>
               </div>
             <% end %>
           <% end %>
@@ -21,8 +22,9 @@
         <div class="carousel-item">
           <% @health_types.each do |type| %>
             <%= link_to new_baby_event_path(type:type), class: "text-decoration" do %>
-              <div class="card baby">
-                <h2><%= type %></h2>
+              <div class="card baby d-flex align-items-center">
+                <div class="event-icon"><%= image_tag type, height: 40, width: 40  %></div>
+                <div><h2><%= type %></h2></div>
               </div>
               <% end %>
             <% end %>
@@ -30,8 +32,9 @@
         <div class="carousel-item">
           <% @other_event_types.each do |type| %>
             <%= link_to new_baby_event_path(type:type), class: "text-decoration" do %>
-              <div class="card baby">
-                <h2><%= type %></h2>
+              <div class="card baby d-flex align-items-center">
+                <div class="event-icon"><%= image_tag "Autre_evenement", height: 40, width: 40  %></div>
+                <div><h2><%= type %></h2></div>
               </div>
               <% end %>
             <% end %>
