--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -22,18 +22,17 @@
           <% else %>
             <%= "" %>
           <% end %>
-          <%# <%= link_to baby_event_path(@baby) do %>
+          <%= link_to baby_event_path(@baby, event) do %>
             <div class="card event" id="card-timeline">
               <h2 class="text-timeline"><%= event.type %></h2>
               <p class="text-timeline" id="time"><%= event.start_time.strftime("%Hh%M") %></p>
-              
               <% if event.value_string != nil %>
                 <p class="text-timeline"><%= event.value_string %></p>
               <% else %>
                 <p class="text-timeline"><%= event.value_float.to_i %> ml</p>
               <% end %>
             </div>
-          <%# <% end %>
+          <% end %>
         </div>
       <% end %>
     </div>
