--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -20,9 +20,9 @@
               <% last_date << event.start_time %>
             </div>
           <% else %>
-            <%= "" %>
+            <%= " " %>
           <% end %>
-          <%= link_to baby_event_path(@baby, event) do %>
+          <%= link_to baby_event_path(@baby, event), class: "text-decoration" do %>
             <div class="card event" id="card-timeline">
               <h2 class="text-timeline"><%= event.type %></h2>
               <p class="text-timeline" id="time"><%= event.start_time.strftime("%Hh%M") %></p>
@@ -38,4 +38,3 @@
     </div>
   </div>
 </div>
-
