--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,26 @@
 <body>
   <div class="container">
-  <h1><%= @event.type %> du <%= @event.start_time %> </h1>
+    <div class="card">
+      <h1><%= @event.type %></h1>
+      <h2> du <%= @event.start_time.strftime("%d.%m.%Y") %></h2>
+      <p class="text-timeline" id="time"><%= @event.start_time.strftime("%Hh%M") %></p>
+      <% if @event.value_string != nil %>
+      <p class="text-timeline"><%= @event.value_string %></p>
+      <% elsif @event.type == "Biberon" %>
+      <p class="text-timeline"><%= @event.value_float.to_i %> ml</p>
+      <% elsif @event.type == "Taille" %>
+      <p class="text-timeline"><%= @event.value_float.to_i %> cm</p>
+      <% elsif @event.type == "Poids" %>
+      <p class="text-timeline"><%= @event.value_float %> kg</p>
+      <% elsif @event.type == "Temperature" %>
+      <p class="text-timeline"><%= @event.value_float %> °C</p>
+      <% elsif @event.type == "Dodo" %>
+      <p class="text-timeline"> Réveil à<%= @event.end_time.strftime("%Hh%M") %></p>
+      <p class="text-timeline">Durée <%= @event.calculate_duration %></p>
+      <% else %>
+
+      <% end %>
+      <p class="text-timeline d-flex mt-3"><%= @event.comment %></p>
+    </div>
   </div>
 </body>
