--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -46,7 +46,7 @@
           <div>
             <i class="fas fa-calendar-alt"></i>
           </div>
-          <div class="">
+          <div>
             <p class="card-title-dark">Evenements passés</p>
           </div>
         </div>
