--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -23,11 +23,22 @@
           <%= link_to baby_event_path(@baby, event), class: "text-decoration" do %>
             <div class="card event" id="card-timeline">
               <h2 class="text-timeline"><%= event.type %></h2>
-              <p class="text-timeline" id="time"><%= event.start_time.strftime("%Hh%M") %></p>
+              <% unless event.type == "Dodo" %>
+                <p class="text-timeline" id="time"><%= event.start_time.strftime("%Hh%M") %></p>
+              <% end %>
               <% if event.value_string != nil %>
                 <p class="text-timeline"><%= event.value_string %></p>
-              <% else %>
+              <% elsif event.type == "Biberon" %>
                 <p class="text-timeline"><%= event.value_float.to_i %> ml</p>
+              <% elsif event.type == "Taille" %>
+                <p class="text-timeline"><%= event.value_float.to_i %> cm</p>
+              <% elsif event.type == "Poids" %>
+                <p class="text-timeline"><%= event.value_float %> kg</p>
+              <% elsif event.type == "Temperature" %>
+                <p class="text-timeline"><%= event.value_float %> °C</p>
+              <% elsif event.type == "Dodo" %>
+                <p class="text-timeline" id="time"> De <%= event.start_time.strftime("%Hh%M") %> à <%= event.end_time.strftime("%Hh%M") %>
+                <p class="text-timeline">Durée <%= event.calculate_duration %></p>
               <% end %>
             </div>
           <% end %>
