adapted format of timeline card with icons

--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -32,6 +32,11 @@
   margin-bottom: 0;
 }
 
+.container-text-timeline {
+  display: flex;
+  flex-direction: column;
+}
+
 #time {
   font-weight: bold;
 }
