--- a/app/assets/stylesheets/pages/_baby_timeline.scss
+++ b/app/assets/stylesheets/pages/_baby_timeline.scss
@@ -1,4 +1,4 @@
-.cards-timeline {
+#cards-timeline {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -6,5 +6,12 @@
 
 .event {
   margin-top: 20px;
+  display:flex;
+  flex-direction: row;
+
+}
+
+.container-text-timeline {
+  
 }
 
