--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -22,27 +22,28 @@
           <% end %>
           <%= link_to baby_event_path(@baby, event), class: "text-decoration" do %>
             <div class="card event" id="card-timeline">
-              <div>
-                <div class="event-icon"><%= image_tag event.type, height: 40, width: 40 %></div>
+              
+              <div class="event-icon"><%= image_tag event.type, height: 40, width: 40 %></div>
+              <div class="container-text">
+                <h2 class="text-timeline"><%= event.type %></h2>
+                <% unless event.type == "Dodo" %>
+                  <p class="text-timeline" id="time"><%= event.start_time.strftime("%Hh%M") %></p>
+                <% end %>
+                <% if event.value_string != nil %>
+                  <p class="text-timeline"><%= event.value_string %></p>
+                <% elsif event.type == "Biberon" %>
+                  <p class="text-timeline"><%= event.value_float.to_i %> ml</p>
+                <% elsif event.type == "Taille" %>
+                  <p class="text-timeline"><%= event.value_float.to_i %> cm</p>
+                <% elsif event.type == "Poids" %>
+                  <p class="text-timeline"><%= event.value_float %> kg</p>
+                <% elsif event.type == "Temperature" %>
+                  <p class="text-timeline"><%= event.value_float %> °C</p>
+                <% elsif event.type == "Dodo" %>
+                  <p class="text-timeline" id="time"> De <%= event.start_time.strftime("%Hh%M") %> à <%= event.end_time.strftime("%Hh%M") %>
+                  <p class="text-timeline">Durée <%= event.calculate_duration %></p>
+                <% end %>
               </div>
-              <h2 class="text-timeline"><%= event.type %></h2>
-              <% unless event.type == "Dodo" %>
-                <p class="text-timeline" id="time"><%= event.start_time.strftime("%Hh%M") %></p>
-              <% end %>
-              <% if event.value_string != nil %>
-                <p class="text-timeline"><%= event.value_string %></p>
-              <% elsif event.type == "Biberon" %>
-                <p class="text-timeline"><%= event.value_float.to_i %> ml</p>
-              <% elsif event.type == "Taille" %>
-                <p class="text-timeline"><%= event.value_float.to_i %> cm</p>
-              <% elsif event.type == "Poids" %>
-                <p class="text-timeline"><%= event.value_float %> kg</p>
-              <% elsif event.type == "Temperature" %>
-                <p class="text-timeline"><%= event.value_float %> °C</p>
-              <% elsif event.type == "Dodo" %>
-                <p class="text-timeline" id="time"> De <%= event.start_time.strftime("%Hh%M") %> à <%= event.end_time.strftime("%Hh%M") %>
-                <p class="text-timeline">Durée <%= event.calculate_duration %></p>
-              <% end %>
             </div>
           <% end %>
         </div>
