--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -22,23 +22,23 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-8">
-      <div class="card last-event bg-foot mb-3 d-flex flex-column align-items-end ">
-        <div class="title-child">
-          <p>Dernier evenement</p>
+  <%= link_to baby_event_path(@baby, @event_last), class: "text-decoration" do %>
+    <div class="row">
+      <div class="col-8">
+        <div class="card last-event bg-foot mb-3 d-flex flex-column align-items-end ">
+          <div class="title-child">
+            <p>Dernier evenement</p>
+          </div>
         </div>
-
+      </div>
+      <div class="col">
+        <div class="card heal-card mb-3 d-flex align-items-center justify-content-center">
+          <i class="fas fa-heart"></i>
+          <p class="card-title-dark">Santé</p>
+        </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card heal-card mb-3 d-flex align-items-center justify-content-center">
-        <i class="fas fa-heart"></i>
-        <p class="card-title-dark">Santé</p>
-      </div>
-
-    </div>
-  </div>
+  <% end %>
   <%= link_to event_timeline_baby_path(@baby), class: "text-decoration" do %>
     <div class="row">
       <div class="col">
