--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -24,7 +24,7 @@
             <div class="card event" id="card-timeline">
               
               <div class="event-icon"><%= image_tag event.type, height: 40, width: 40 %></div>
-              <div class="container-text">
+              <div class="container-text-timeline">
                 <h2 class="text-timeline"><%= event.type %></h2>
                 <% unless event.type == "Dodo" %>
                   <p class="text-timeline" id="time"><%= event.start_time.strftime("%Hh%M") %></p>
