--- a/app/views/babies/details.html.erb
+++ b/app/views/babies/details.html.erb
@@ -1,12 +1,56 @@
 <div class="container">
   <div>
     <h1><%= @baby.name %></h1>
-    <div class="custom-select" style="width:200px;">
-      <select>
+    <div >
+      <select class="custom-select" style="width:200px;">
         <option value="0">Hier</option>
         <option value="1">Semaine dernière</option>
         <option value="2">Mois dernier</option>
       </select>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-7">
+      <div class="card">
+        <div>
+          <h1>150h</h1>
+          <p>de sommeil</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div>
+          <h1>15</h1>
+          <p>couches</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div>
+          <h1>50 litres</h1>
+          <p>de lait ingurgité</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-5">
+      <div class="card">
+        <h1>37kg</h1>
+        <p>Poids actuel</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <h1>180cm</h1>
+        <p>Taille actuelle</p>
+      </div>
     </div>
   </div>
 </div>
