Weight and height

--- a/app/views/babies/details.html.erb
+++ b/app/views/babies/details.html.erb
@@ -46,7 +46,7 @@
     <div class="col-5">
       <div class="card d-flex align-items-center"">
         <div class="d-flex flex-column justify-content-center align-items-center">
-        <h1>37kg</h1>
+        <h1><%= @weight %> kg</h1>
         <p>Poids actuel</p>
         </div>
         <img class="bg-icon" src="<%= image_path 'Poids.png' %>" alt="poids">
@@ -55,7 +55,7 @@
     <div class="col">
       <div class="card d-flex align-items-center"">
         <div class="d-flex flex-column justify-content-center align-items-center">
-        <h1>180cm</h1>
+        <h1><%= @height %> cm</h1>
         <p>Taille actuelle</p>
         </div>
         <img class="bg-icon" src="<%= image_path 'Taille.png' %>" alt="poids">
