added delete feature to event show

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,6 +26,11 @@
         <% end %>
         <p class="text-timeline d-flex mt-3"><%= @event.comment %></p>
       </div>
+      <div>
+        <%= link_to event_path(@event), method: :delete, data: { confirm: "Voulez-vous vraiment supprimer cet événement #{@event.type}? " } do %>
+        <i class="fas fa-trash-alt"></i>
+        <% end %>
+      </div>
     </div>
   </div>
 </body>
