adding edit to event (unfinished)

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,9 +27,14 @@
         <p class="text-timeline d-flex mt-3"><%= @event.comment %></p>
       </div>
       <div>
+      <%= link_to edit_event_path(@event), method: :patch do %>
+        <i class="fas fa-pencil-alt"></i>
+        <% end %>
+      </div>
+      <div>
         <%= link_to event_path(@event), method: :delete, data: { confirm: "Voulez-vous vraiment supprimer cet événement #{@event.type}? " } do %>
         <i class="fas fa-trash-alt"></i>
-        <% end %>
+        <% end %>        
       </div>
     </div>
   </div>
