first part hours of sleep

--- a/app/views/babies/details.html.erb
+++ b/app/views/babies/details.html.erb
@@ -15,7 +15,7 @@
     <div class="col-7">
       <div class="card d-flex flex-row align-items-center justify-content-center">
         <div>
-          <h1>150h</h1>
+          <h1><%= @sleep %></h1>
           <p>de sommeil</p>
         </div>
       <img src="<%= image_path 'Dodo.png' %>" alt="dodo">
