refactor with if + added photo

--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -28,6 +28,12 @@
   margin-right: 0;
 }
 
+#card-type-evenement {
+  height: 150px;
+  margin-left: 55px;
+  margin-right: 0;
+}
+
 .text-timeline {
   margin-bottom: 0;
 }
