Commit on Atom installation

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Modifier Evenement</h1>
-<%= render 'new', event: @task %>
+<%= render 'new', event: @event %>
 
 <hr>
-<%= link_to tasks_path do %>
+<%= link_to event_path do %>
   <i class="fa fa-history"></i> Back to list
 <% end %>
