adaptations + display event

--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -32,6 +32,11 @@
   height: 150px;
   margin-left: 55px;
   margin-right: 0;
+  align-items: flex-end;
+}
+
+#card-type-evenement-text{
+    color: white;
 }
 
 .text-timeline {
