--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -48,8 +48,8 @@
                 </div>
               </div>
             <% else %>
-              <div class="card event" id="card-type-evenement">
-                <div class="" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url @event.photo.key %>') ">
+              <div class="card event baby-profile-card" id="card-type-evenement" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url @baby.photo.key %>') ">
+                <h2 id="card-type-evenement-text"><%= event.value_string%></h2>
               </div>
             <% end %>
           <% end %>
