--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,6 @@
-    <%= simple_form_for [@baby, @event] do |f| %>
+    <%= simple_form_for @event, as: :event, url: event_path do |f| %>
+    <%# We need "as: :event" otherwise simpleform will create the params of the event_type (Temperature or Dodo or Biberon etc..) and not params of Event due to the Single Table Inheritance %>
+    <%# we need to force the path with "url: event_path" otherwise simpleform will try to send the params to dodo_path or biberon_path that does not exist since these types of event inherit from event model %>
       <%= f.input :value_float, :label => 'Quantité (ml)' if @event.type == "Biberon" %>
       <%= f.input :value_float, :label => 'Température' if @event.type == "Temperature" %>
       <%= f.input :value_float, :label => 'Taille (cm)' if @event.type == "Taille" %>
