--- a/app/views/babies/details.html.erb
+++ b/app/views/babies/details.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <h1><%= @baby.name %></h1>
+    <h1><%#= @baby.name %></h1>
     <div >
       <select class="custom-select mb-3" style="width:200px;">
         <option value="0">Hier</option>
@@ -15,7 +15,7 @@
     <div class="col-7">
       <div class="card d-flex flex-row align-items-center justify-content-center">
         <div>
-          <h1><%= @sleep %></h1>
+          <h1><%= @sleep %> min</h1>
           <p>de sommeil</p>
         </div>
       <img src="<%= image_path 'Dodo.png' %>" alt="dodo">
