diapers and milk

--- a/app/views/babies/details.html.erb
+++ b/app/views/babies/details.html.erb
@@ -24,7 +24,7 @@
     <div class="col">
       <div class="card d-flex align-items-center">
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1>15</h1>
+          <h1><%= @diaper %></h1>
           <p>couches</p>
         </div>
         <img class="bg-icon" src="<%= image_path 'Couche.png' %>" alt="lait">
@@ -35,7 +35,7 @@
     <div class="col">
       <div class="card d-flex flex-row align-items-center">
         <div>
-          <h1>50 litres</h1>
+          <h1><%= @milk %> ml</h1>
           <p>de lait ingurgité</p>
         </div>
         <img id="bibi" src="<%= image_path 'Biberon.png' %>" alt="lait">
