--- a/app/views/babies/details.html.erb
+++ b/app/views/babies/details.html.erb
@@ -1,12 +1,10 @@
 <div class="container">
   <div>
-    <h1><%#= @baby.name %></h1>
+    <h1><%= @baby.name %></h1>
     <div >
-      <select class="custom-select mb-3" style="width:200px;">
-        <option value="0">Hier</option>
-        <option value="1">Semaine dernière</option>
-        <option value="2">Mois dernier</option>
-      </select>
+      <%= form_with url: "/search", method: :get do |form| %>
+        <%= form.select :city, ["Hier", "Semaine dernière", "Mois dernier"] %>
+      <% end %>
     </div>
   </div>
 </div>
