created baby Leo in seeds

--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -49,7 +49,7 @@
               </div>
             <% else %>
               <div class="card event baby-profile-card" id="card-type-evenement" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url @baby.photo.key %>') ">
-                <h2 id="card-type-evenement-text"><%= event.value_string%></h2>
+                <h2 class="card-type-evenement-text"><%= event.value_string%></h2>
               </div>
             <% end %>
           <% end %>
