--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Modifier Evenement</h1>
-<%= render 'form' %>
+<body>
+  <div class="container">
+    <h1>Modifier Evenement</h1>
+    <%= render 'form' %>
+  </div>
+</body>
