--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,39 +1,48 @@
 <body>
   <div class="container">
     <div class="card" id="card-show">
-      <div class="event-icon">
-        <%= image_tag "#{@event.type}.png", height: 60, width: 60 %>
-      </div>
-      <div class="container-text-timeline">
+      <div class="event-show-card-top">
+        <div class="event-icon-show">
+          <%= image_tag "#{@event.type}.png", height: 60, width: 60 %>
+        </div>
+        <div>
         <h1><%= @event.type %></h1>
         <h2> du <%= @event.start_time.strftime("%d.%m.%Y") %></h2>
-        <% unless @event.type == "Dodo" %>
-          <p class="text-timeline" id="time"><%= @event.start_time.strftime("%Hh%M") %></p>
-        <% end %>
-        <% if @event.value_string != nil %>
-          <p class="text-timeline"><%= @event.value_string %></p>
-        <% elsif @event.type == "Biberon" %>
-          <p class="text-timeline"><%= @event.value_float.to_i %> ml</p>
-        <% elsif @event.type == "Taille" %>
-          <p class="text-timeline"><%= @event.value_float.to_i %> cm</p>
-        <% elsif @event.type == "Poids" %>
-          <p class="text-timeline"><%= @event.value_float %> kg</p>
-        <% elsif @event.type == "Temperature" %>
-          <p class="text-timeline"><%= @event.value_float %> °C</p>
-        <% elsif @event.type == "Dodo" %>
-          <p class="text-timeline" id="time"> De <%= @event.start_time.strftime("%Hh%M") %> à <%= @event.end_time.strftime("%Hh%M") %>
-          <p class="text-timeline">Durée <%= @event.calculate_duration %></p>
-        <% end %>
-        <p class="text-timeline d-flex mt-3"><%= @event.comment %></p>
-      <div>
-      <%= link_to edit_event_path(@event) do %>
-        <i class="fas fa-pencil-alt"></i>
-        <% end %>
+        </div>
       </div>
-      <div>
-        <%= link_to event_path(@event), method: :delete, data: { confirm: "Voulez-vous vraiment supprimer cet événement #{@event.type}? " } do %>
-        <i class="fas fa-trash-alt"></i>
-        <% end %>
+      <div Class="event-show-card-content">
+        <div class="container-text-timeline">
+          <% unless @event.type == "Dodo" %>
+          <p class="text-timeline" id="time"><%= @event.start_time.strftime("%Hh%M") %></p>
+          <% end %>
+          <% if @event.value_string != nil %>
+          <p class="text-timeline"><%= @event.value_string %></p>
+          <% elsif @event.type == "Biberon" %>
+          <p class="text-timeline"><%= @event.value_float.to_i %> ml</p>
+          <% elsif @event.type == "Taille" %>
+          <p class="text-timeline"><%= @event.value_float.to_i %> cm</p>
+          <% elsif @event.type == "Poids" %>
+          <p class="text-timeline"><%= @event.value_float %> kg</p>
+          <% elsif @event.type == "Temperature" %>
+          <p class="text-timeline"><%= @event.value_float %> °C</p>
+          <% elsif @event.type == "Dodo" %>
+          <p class="text-timeline" id="time"> De <%= @event.start_time.strftime("%Hh%M") %> à
+            <%= @event.end_time.strftime("%Hh%M") %>
+            <p class="text-timeline">Durée <%= @event.calculate_duration %></p>
+            <% end %>
+            <p class="text-timeline d-flex mt-3"><%= @event.comment %></p>
+        </div>
+      <div class="event-show-card-bottom">
+          <div>
+            <%= link_to edit_event_path(@event) do %>
+              <i class="fas fa-pencil-alt"></i>
+            <% end %>
+          </div>
+          <div>
+            <%= link_to event_path(@event), method: :delete, data: { confirm: "Voulez-vous vraiment supprimer cet événement #{@event.type}? " } do %>
+            <i class="fas fa-trash-alt"></i>
+            <% end %>
+          </div>
       </div>
       </div>
     </div>
